--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="site-heading">
                         <h1 class="text-dark">Abhyant Blog</h1>
                         <hr class="small">
-                        <span class="subheading">A Abhyant Blog Theme by Start Bootstrap</span>
+                        <span class="subheading">An Abhyant Blog by team Abhyant</span>
                     </div>
                 </div>
             </div>
