--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('https://pin.it/1CbP7X4Hg')">
+    <header class="intro-header" style="background-image: url('https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
