--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
 
     <!-- Theme CSS -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="css/clean-blog.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -74,9 +75,9 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
-                        <h1>About Me</h1>
+                        <h1>About Us</h1>
                         <hr class="small">
-                        <span class="subheading">This is what I do.</span>
+                        <span class="subheading">This is who we are.</span>
                     </div>
                 </div>
             </div>
@@ -84,16 +85,73 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+    <section class="about-us">
+        <h1>Meet Our Team</h1>
+        <div class="team">
+            <!-- Repeat this block for each team member -->
+            <div class="team-member">
+                <img src="https://scontent.fccu17-1.fna.fbcdn.net/v/t39.30808-1/423516521_1333017044757716_7367743270831326881_n.jpg?stp=dst-jpg_p200x200&_nc_cat=107&ccb=1-7&_nc_sid=50d2ac&_nc_ohc=QV5dv9nHfuQQ7kNvgHYoe2B&_nc_ht=scontent.fccu17-1.fna&oh=00_AYAeFFy7OULrv3a87mL6Wv0fWhQNQ6LUdau8qTSe1Nw2CA&oe=6699B175" alt="Team Member 1">
+                <h2>Ritwika Chagol</h2>
+                <p>Ritwika is a Chagol and a noob in everything. She only knows how to sleep and how to eat. She is a bad girl.</p>
             </div>
+            <div class="team-member">
+                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 2">
+                <h2>Jane Smith</h2>
+                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 3">
+                <h2>Jane Smith</h2>
+                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 4">
+                <h2>Jane Smith</h2>
+                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 5">
+                <h2>Jane Smith</h2>
+                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 6">
+                <h2>Jane Smith</h2>
+                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 7">
+                <h2>Jane Smith</h2>
+                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 8">
+                <h2>Jane Smith</h2>
+                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 9">
+                <h2>Jane Smith</h2>
+                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 10">
+                <h2>Jane Smith</h2>
+                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 11">
+                <h2>Jane Smith</h2>
+                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 12">
+                <h2>Jane Smith</h2>
+                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+            </div>
+            <!-- Add more team members here -->
         </div>
-    </div>
-
+    </section>
     <hr>
 
     <!-- Footer -->
@@ -145,6 +203,7 @@
 
     <!-- Theme JavaScript -->
     <script src="js/clean-blog.min.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
