--- a/about.html
+++ b/about.html
@@ -91,8 +91,8 @@
             <!-- Repeat this block for each team member -->
             <div class="team-member">
                 <img src="https://scontent.fccu17-1.fna.fbcdn.net/v/t39.30808-1/423516521_1333017044757716_7367743270831326881_n.jpg?stp=dst-jpg_p200x200&_nc_cat=107&ccb=1-7&_nc_sid=50d2ac&_nc_ohc=QV5dv9nHfuQQ7kNvgHYoe2B&_nc_ht=scontent.fccu17-1.fna&oh=00_AYAeFFy7OULrv3a87mL6Wv0fWhQNQ6LUdau8qTSe1Nw2CA&oe=6699B175" alt="Team Member 1">
-                <h2>Ritwika Chagol</h2>
-                <p>Ritwika is a Chagol and a noob in everything. She only knows how to sleep and how to eat. She is a bad girl.</p>
+                <h2>Ritwika Pal</h2>
+                <p>Ritwika .</p>
             </div>
             <div class="team-member">
                 <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 2">
