--- a/about.html
+++ b/about.html
@@ -92,11 +92,11 @@
             <div class="team-member">
                 <img src="https://scontent.fccu17-1.fna.fbcdn.net/v/t39.30808-1/423516521_1333017044757716_7367743270831326881_n.jpg?stp=dst-jpg_p200x200&_nc_cat=107&ccb=1-7&_nc_sid=50d2ac&_nc_ohc=QV5dv9nHfuQQ7kNvgHYoe2B&_nc_ht=scontent.fccu17-1.fna&oh=00_AYAeFFy7OULrv3a87mL6Wv0fWhQNQ6LUdau8qTSe1Nw2CA&oe=6699B175" alt="Team Member 1">
                 <h2>Ritwika Pal</h2>
-                <p>Ritwika .</p>
+                <p>Ritwika Pal,  .</p>
             </div>
             <div class="team-member">
                 <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 2">
-                <h2>Jane Smith</h2>
+                <h2>Manas Bhuimali</h2>
                 <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
             </div>
             <div class="team-member">
