--- a/about.html
+++ b/about.html
@@ -90,64 +90,74 @@
         <div class="team">
             <!-- Repeat this block for each team member -->
             <div class="team-member">
-                <img src="https://scontent.fccu17-1.fna.fbcdn.net/v/t39.30808-1/423516521_1333017044757716_7367743270831326881_n.jpg?stp=dst-jpg_p200x200&_nc_cat=107&ccb=1-7&_nc_sid=50d2ac&_nc_ohc=QV5dv9nHfuQQ7kNvgHYoe2B&_nc_ht=scontent.fccu17-1.fna&oh=00_AYAeFFy7OULrv3a87mL6Wv0fWhQNQ6LUdau8qTSe1Nw2CA&oe=6699B175" alt="Team Member 1">
+                <img src="./PICS/ritwikapal.jpg" alt="Team Member 1">
                 <h2>Ritwika Pal</h2>
-                <p>Ritwika Pal,  .</p>
+                <p>Social media manager, Website developer </p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 2">
-                <h2>Manas Bhuimali</h2>
-                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+                <img src="./PICS/manoshbhuimali.jpg" alt="Team Member 2">
+                <h2>Manosh Bhuimali</h2>
+                <p>Researcher</p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 3">
-                <h2>Jane Smith</h2>
-                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+                <img src="./PICS/amitava.jpg" alt="Team Member 3">
+                <h2>Amitava Chakraborty</h2>
+                <p>Subordinate</p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 4">
-                <h2>Jane Smith</h2>
-                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+                <img src="./PICS/debmalya.jpg" alt="Team Member 4">
+                <h2>Debmalya Mukherjee</h2>
+                <p>Subordinate</p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 5">
-                <h2>Jane Smith</h2>
-                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+                <img src="./PICS/riya.jpg" alt="Team Member 5">
+                <h2>Riya Baidya</h2>
+                <p>Subordinate</p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 6">
-                <h2>Jane Smith</h2>
-                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+                <img src="./PICS/debojit.jpg" alt="Team Member 6">
+                <h2>Debojit Saha</h2>
+                <p>Subordinate</p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 7">
-                <h2>Jane Smith</h2>
-                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+                <img src="./PICS/saunak.jpg" alt="Team Member 7">
+                <h2>Saunak Dutta</h2>
+                <p>Subordinate</p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 8">
-                <h2>Jane Smith</h2>
-                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+                <img src="./PICS/anushree.jpg" alt="Team Member 8">
+                <h2>Anushree Chatterjee</h2>
+                <p>Subordinate</p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 9">
-                <h2>Jane Smith</h2>
-                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+                <img src="./PICS/indranimukherjee.jpg" alt="Team Member 9">
+                <h2>Indrani Mukherjee</h2>
+                <p>Subordinate</p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 10">
-                <h2>Jane Smith</h2>
-                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+                <img src="./PICS/ankit.jpg" alt="Team Member 10">
+                <h2>Ankit Raj</h2>
+                <p>Subordinate</p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 11">
-                <h2>Jane Smith</h2>
-                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+                <img src="./PICS/siddhartha.jpg" alt="Team Member 11">
+                <h2>Siddhartha Parmer</h2>
+                <p>Content Writer</p>
             </div>
             <div class="team-member">
-                <img src="https://i.pinimg.com/originals/68/29/5c/68295c0bd07aacc9a8c58016a26a0144.jpg" alt="Team Member 12">
-                <h2>Jane Smith</h2>
-                <p>Jane is a creative director with over 10 years of experience in the industry. She excels in creating visually appealing designs that captivate audiences.</p>
+                <img src="./PICS/soham.jpg" alt="Team Member 12">
+                <h2>Soham Chandra</h2>
+                <p>Subordinate</p>
+            </div>
+             <div class="team-member">
+                <img src="./PICS/supratik.jpg" alt="Team Member 12">
+                <h2>Supratik Chakraborty</h2>
+                <p>Subordinate</p>
+            </div>
+             <div class="team-member">
+                <img src="https://th.bing.com/th/id/OIP.zg_3qiXGRVMw-JTtlpUMjAAAAA?rs=1&pid=ImgDetMain" alt="Team Member 12">
+                <h2>Ahasan Ali</h2>
+                <p>Subordinate</p>
             </div>
             <!-- Add more team members here -->
         </div>
