--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Abhyant</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,7 +56,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="post.html">Sample Post</a>
+                        <a href="post.html">Blog 1</a>
                     </li>
                     <!-- <li>
                         <a href="contact.html">Contact</a>
@@ -174,7 +174,7 @@
                             <a href="#">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                                    <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
@@ -195,7 +195,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2024</p>
+                    <p class="copyright text-muted">Copyright &copy; Abhyant 2024</p>
                 </div>
             </div>
         </div>
