--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
             <div class="team-member">
                 <img src="./PICS/manoshbhuimali.jpg" alt="Team Member 2">
                 <h2>Manosh Bhuimali</h2>
-                <p>Researcher</p>
+                <p> Content Researcher</p>
             </div>
             <div class="team-member">
                 <img src="./PICS/amitava.jpg" alt="Team Member 3">
