--- a/post.html
+++ b/post.html
@@ -69,7 +69,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('https://media.istockphoto.com/id/866987706/photo/indian-wedding-hands.jpg?s=612x612&w=0&k=20&c=6L-u9qhFPv9MjDnF4UK4AqjVbDKM4_8Xad72IHhwPZE=')">
+    <header class="intro-header" style="background-image: url('https://static.vecteezy.com/system/resources/thumbnails/024/841/121/original/vintage-background-with-moving-golden-mandala-ornament-free-video.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -88,7 +88,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h1>Ancient Indian Marriage Culture</h1>
                     <p>The Indian wedding culture is an amalgamation of the ancient and modern. It is a time for family and friends to come together, celebrate the union of two people in love, and witness the celebration of marriage.
 
                         It is not just the bride and groom who are getting married, but the entire family. 
