--- a/post.html
+++ b/post.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="icon" href="https://th.bing.com/th/id/OIP.SlbvFyvyxmRfNL-TAI1F4AHaJc?rs=1&pid=ImgDetMain" type="image/x-icon">
 
     <title>Adhyant Blog - 1</title>
 
