--- a/post.html
+++ b/post.html
@@ -89,7 +89,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p>The Indian wedding culture is an amalgamation of the ancient and modern. It is a time for family and friends to come together, celebrate the union of two people in love, and witness the celebration of marriage.
+                    <p><span style="font-size:3em; font-weight:bolder;">T</span>he Indian wedding culture is an amalgamation of the ancient and modern. It is a time for family and friends to come together, celebrate the union of two people in love, and witness the celebration of marriage.
 
                         It is not just the bride and groom who are getting married, but the entire family. 
                         
