--- a/post.html
+++ b/post.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="https://th.bing.com/th/id/OIP.SlbvFyvyxmRfNL-TAI1F4AHaJc?rs=1&pid=ImgDetMain" type="image/x-icon">
 
-    <title>Adhyant Blog - 1</title>
+    <title>Abhyant Blog - 1</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">Adhyant</a>
+                <a class="navbar-brand" href="index.html">Abhyant</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -166,7 +166,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Adhyant 2024</p>
+                    <p class="copyright text-muted">Copyright &copy; Abhyant 2024</p>
                 </div>
             </div>
         </div>
