--- a/post.html
+++ b/post.html
@@ -123,7 +123,7 @@
  
 
                         In many parts of India, the tradition of "Kanya Daan" symbolizes the bride being given away and typically involves her not seeing the groom before the ceremony.</p>
-                    <p>n Northern India, the bride participates in a traditional puja before entering her new household, while Southern Indian customs include an elaborate reception called "Kalasam" to welcome the bride. Additionally, there's a ritual where the groom's sister presents a sari to the bride as part of the ceremony.
+                    <p>In Northern India, the bride participates in a traditional puja before entering her new household, while Southern Indian customs include an elaborate reception called "Kalasam" to welcome the bride. Additionally, there's a ritual where the groom's sister presents a sari to the bride as part of the ceremony.
 
  
 
@@ -139,7 +139,7 @@
                 
                     <span class="caption text-muted">Elegant and vibrant Indian wedding backdrop adorned with traditional motifs and rich colors, celebrating the union of love and culture.</span>
 
-                    <p><span style="font-weight: bolder; font-size: 1.5em;">Ultimately, </span>Indian weddings celebrate the blend of culture, religion, and tradition, each one uniquely reflecting the couple's values and beliefs. Embracing this diversity adds a special touch to your wedding, creating unforgettable memories.</p>
+                    <p>Ultimately, Indian weddings celebrate the blend of culture, religion, and tradition, each one uniquely reflecting the couple's values and beliefs. Embracing this diversity adds a special touch to your wedding, creating unforgettable memories.</p>
                     <p>Placeholder text by <a href="https://www.amybloom.com/">Amy Bloom</a>. Image is taken from <a href="https://www.dreamstime.com/">DreamsTime</a>.</p>
                 </div>
             </div>
