--- a/post.html
+++ b/post.html
@@ -56,7 +56,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="post.html">Blog 1</a>
+                        <a href="/PICS/blog2/post2.html">Blog 2</a>
                     </li>
                     <!-- <li>
                         <a href="contact.html">Contact</a>
