--- a/PICS/post2.html
+++ b/PICS/post2.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="https://th.bing.com/th/id/OIP.SlbvFyvyxmRfNL-TAI1F4AHaJc?rs=1&pid=ImgDetMain" type="image/x-icon">
 
-    <title>Assembly of Deities: Comparing the Divine Figures</title>
+    <title>Exploring the Echoes: Mythological Themes in Greek and Indian Cultures</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
