--- a/PICS/post2.html
+++ b/PICS/post2.html
@@ -43,20 +43,20 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">Abhyant</a>
+                <a class="navbar-brand" href="https://ritwika002.github.io/abhyant/index.html">Abhyant</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="https://ritwika002.github.io/abhyant/index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="https://ritwika002.github.io/abhyant/about.html">About</a>
                     </li>
                     <li>
-                        <a href="post2.html">Blog 2</a>
+                        <a href="https://ritwika002.github.io/abhyant/post.html">Blog 1</a>
                     </li>
                     <!-- <li>
                         <a href="contact.html">Contact</a>
